fix: overflow-x again again

--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -10,3 +10,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+  @apply overflow-x-hidden;
+}
